--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     path: ../babigol
   flutter_modular: ^6.3.4
   flutter_dotenv: ^5.1.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -28,4 +29,8 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  assets:
+  - assets/.env
+
 
