add packege in sceure token and imporst in auth module

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_modular: ^6.3.4
   flutter_dotenv: ^5.1.0
   provider: ^6.1.2
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
